# StreamPulse-NSE

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LEGAL.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  scheduled-retrain.yml
apps/beam/: pubsub_to_bigquery.py
apps/flink/jobs/: anomaly_online.py  session_bars.py  validate_enrich.py  window_bars.py
apps/flink/jobs/common/: ohlcv.py  pipeline.py
apps/flink/jobs/common/pb/: anomaly_pb2.py  bar_pb2.py
apps/generator/: __init__.py  anomaly_injector.py  aws_target.py  gbm.py  gcp_target.py  kafka_sink.py  main.py  metrics.py  proto_format.py  schemas.py
apps/generator/pb/: __init__.py  tick_pb2.py
apps/ml/: __init__.py  arima_forecast.py  feature_builder.py  isolation_forest_retrain.py  mlflow_utils.py  predict_loop.py
clickhouse/config/: users-streampulse.xml
clickhouse/init/: 01_create_database.sql
data/: anomaly_ground_truth.json  nifty50_metadata.csv  training_ground_truth.json
data/historical_ohlc/: ADANIENT.parquet  ADANIPORTS.parquet  APOLLOHOSP.parquet  ASIANPAINT.parquet  AXISBANK.parquet  BAJAJ-AUTO.parquet  BAJAJFINSV.parquet  BAJFINANCE.parquet  BHARTIARTL.parquet  BPCL.parquet  BRITANNIA.parquet  CIPLA.parquet  COALINDIA.parquet  DIVISLAB.parquet  DRREDDY.parquet  EICHERMOT.parquet  GRASIM.parquet  HCLTECH.parquet  HDFCBANK.parquet  HDFCLIFE.parquet  HEROMOTOCO.parquet  HINDALCO.parquet  HINDUNILVR.parquet  ICICIBANK.parquet  INDUSINDBK.parquet  INFY.parquet  ITC.parquet  JSWSTEEL.parquet  KOTAKBANK.parquet  LT.parquet  M&M.parquet  MARUTI.parquet  NESTLEIND.parquet  NTPC.parquet  ONGC.parquet  POWERGRID.parquet  RELIANCE.parquet  SBILIFE.parquet  SBIN.parquet  SHRIRAMFIN.parquet  (+10 more)
docker/flink/: Dockerfile
docker/generator/: Dockerfile
docs/: HANDOFF-CONTEXT.md  PROGRESS.md  architecture.md  cloud-architecture-aws.md  cloud-architecture-gcp.md  decisions.md  demo.md  detection-benchmarks.md  ml-pipeline.md  streaming-deep-dive.md
docs/images/: k8s-get-all.txt
docs/images/aws/: localstack-verification.txt
docs/runbooks/: clickhouse_disk_full.md  flink_job_failure.md  kafka_lag_spike.md
helm/: kind-cluster.yaml
helm/charts/clickhouse/: Chart.yaml  values.yaml
helm/charts/clickhouse/files/: materialized_views.sql  schema.sql  ttl_policies.sql
helm/charts/clickhouse/templates/: init-job.yaml  statefulset.yaml
helm/charts/flink/: Chart.yaml  values.yaml
helm/charts/flink/files/common/: ohlcv.py  pipeline.py  proto_codec.py
helm/charts/flink/files/jobs/: anomaly_online.py  session_bars.py  validate_enrich.py  window_bars.py
helm/charts/flink/templates/: configmap.yaml  jobmanager.yaml  jobs-configmaps.yaml  taskmanager.yaml
helm/charts/grafana/: Chart.yaml  values.yaml
helm/charts/grafana/templates/: grafana.yaml
helm/charts/prometheus/: Chart.yaml  values.yaml
helm/charts/prometheus/templates/: prometheus.yaml
helm/charts/redpanda/: Chart.yaml  values.yaml
helm/charts/redpanda/templates/: service.yaml  statefulset.yaml
helm/charts/streampulse-flink-jobs/: Chart.yaml  values.yaml
helm/charts/streampulse-flink-jobs/templates/: submit-job.yaml
helm/charts/streampulse-generator/: Chart.yaml  values.yaml
helm/charts/streampulse-generator/templates/: deployment.yaml
helm/charts/streampulse-platform/: Chart.yaml  values.yaml
helm/charts/streampulse-platform/templates/: ml-retrain-cronjob.yaml  networkpolicies.yaml
helm/values/: values-tiny.yaml
infra/terraform/envs/demo/: main.tf
infra/terraform/envs/local/: main.tf
infra/terraform/modules/aws/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aws/lambda/: validate_enrich_lambda.py
infra/terraform/modules/gcp/: main.tf  outputs.tf  variables.tf
observability/alertmanager/: alertmanager.tmpl.yml
observability/grafana/dashboards/: anomaly_feed.json  market_overview.json  ml_performance.json  pipeline_health.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/prometheus/: alerts.yml  prometheus.yml
schemas/protobuf/: anomaly.proto  bar.proto  tick.proto
scripts/: ci_sync_helm.py  gen_proto.py  inject_demo_anomalies.py  pull_historical.py  register_schemas.py  reset_pipeline.py  seed_clickhouse.py  verify_bars.py  verify_exactly_once.py
tests/benchmarks/: evaluate_detection.py
tests/unit/: test_anomaly_injector.py  test_gbm.py  test_proto_codec.py
