[tool.poetry]
name = "streampulse-nse"
version = "0.1.0"
description = "Real-time anomaly detection on Indian equity markets: Kafka, Flink, ClickHouse, Grafana, Kubernetes, multi-cloud"
authors = ["Ayush Gupta <agcr7jw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "generator", from = "apps" },
    { include = "ml", from = "apps" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.9"
confluent-kafka = "^2.6"
yfinance = "^0.2.40"
pandas = "^2.2"
numpy = "^1.26"
pyarrow = "^17.0"
scikit-learn = "^1.5"
statsmodels = "^0.14"
joblib = "^1.4"
mlflow = "^2.16"
clickhouse-connect = "^0.8"
prometheus-client = "^0.21"
typer = "^0.16"   # 0.12 is incompatible with click 8.2+ (make_metavar signature)
python-dotenv = "^1.0"

# NOTE: apache-flink (PyFlink) is deliberately NOT a local dependency.
# PyFlink jobs execute inside the Flink Docker image (Python 3.10, pinned to the
# cluster version). See docker/flink/Dockerfile and docs/decisions.md ADR-003.

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
mypy = "^1.11"
pytest = "^8.3"
pre-commit = "^3.8"
sqlfluff = "^3.1"
boto3 = "^1.35"          # LocalStack/AWS work (Day 11)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# E501: line length is the formatter's job
# B008: typer.Option in defaults is the canonical typer API
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Flink jobs execute on the container's Python 3.10 — no 3.11-only idioms
"apps/flink/**" = ["UP017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.sqlfluff.core]
dialect = "clickhouse"
exclude_rules = "L016"
